--- a/_config.yml
+++ b/_config.yml
@@ -13,23 +13,23 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MatJek
+title: ucdavis-bioinformatics-training
 description: > # this means to ignore newlines until "baseurl:"
-  Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
-baseurl: "/matjek"
-url: "https://shawnteoh.github.io"
+  Site for UC Davis Bioinformatics Core Training Materials
+baseurl: "/"
+url: "https://ucdavis-bioinformatics-training.github.io"
 permalink: /:year/:month/:day/:title
-repository: ShawnTeoh/matjek
-paginate: 5
+repository: ucdavis-bioinformatics-training/ucdavis-bioinformatics-training.github.io
+paginate: 10
 
 # MatJek specific configurations
-github_profile: "https://github.com/ShawnTeoh"
-user: "John Doe"
-user_email: "john@doe.com"
-contact_url: "https://goo.gl/tVljbV"
-google_tracking_id: "UA-96359860-1"
-google_site_verification: "UA-96359860-1"
-disqus_shortname: "matjek"
+github_profile: "https://github.com/ucdavis-bioinformatics-training"
+user: "UC Davis Bioinformatics Core"
+user_email: "bioinformatics.core@ucdavis.edu  "
+contact_url: "http://bioinformatics.ucdavis.edu"
+google_tracking_id: 
+google_site_verification: 
+disqus_shortname: 
 
 # Build settings
 markdown: kramdown
