--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "UC Davis Bioinformatics Core Training Course Materials"
-url: "https://ucdavis-bioinformatics-training.github.io"
+title: ""
+url: ""
 
